# ProtoEPN

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  release.yml
apps/epn-client/: CMakeLists.txt  main.cpp
apps/epn-discovery/: CMakeLists.txt  main.cpp
apps/epn-relay/: CMakeLists.txt  main.cpp
apps/epn-server/: CMakeLists.txt  main.cpp
apps/epn-tun-client/: CMakeLists.txt  dns_proxy.hpp  main.cpp
apps/epn-tun-dev/: CMakeLists.txt  main.cpp
apps/epn-tun-server/: CMakeLists.txt  main.cpp
apps/epn-win-client/: CMakeLists.txt  README-WINDOWS.md  epn-win.rc  main.cpp  win_utils.hpp
apps/epn-windows-gui/: App.xaml  App.xaml.cs  EPN.WindowsGui.slnx  MainWindow.xaml  MainWindow.xaml.cs  README.md  epn-windows-gui.csproj
apps/epn-windows-gui/Assets/: icons8-attribution.txt
apps/epn-windows-gui/Services/: EndpointParser.cs  EpnClientProcess.cs  InstanceCoordinator.cs  SocksProbe.cs  SystemProxy.cs  UserSettings.cs
cmake/: CompilerOptions.cmake  Dependencies.cmake  MinGWToolchain.cmake
libs/epn-core/: CMakeLists.txt
libs/epn-core/include/epn/core/: result.hpp  types.hpp
libs/epn-crypto/: CMakeLists.txt
libs/epn-crypto/include/epn/crypto/: aead.hpp  kdf.hpp  keys.hpp  signing.hpp
libs/epn-crypto/src/: aead.cpp  kdf.cpp  keys.cpp  signing.cpp
libs/epn-discovery/: CMakeLists.txt
libs/epn-discovery/include/epn/discovery/: announcement.hpp  client.hpp
libs/epn-discovery/src/: announcement.cpp  client.cpp
libs/epn-dns/include/epn/dns/: resolver.hpp
libs/epn-observability/: CMakeLists.txt
libs/epn-observability/include/epn/observability/: log.hpp
libs/epn-protocol/: CMakeLists.txt
libs/epn-protocol/include/epn/protocol/: framing.hpp  messages.hpp  onion.hpp
libs/epn-protocol/src/: framing.cpp  onion.cpp
libs/epn-routing/: CMakeLists.txt
libs/epn-routing/include/epn/routing/: route.hpp
libs/epn-routing/src/: route.cpp
libs/epn-transport/: CMakeLists.txt
libs/epn-transport/include/epn/transport/: connection.hpp
libs/epn-transport/src/: connection.cpp
libs/epn-tunnel/: CMakeLists.txt
libs/epn-tunnel/include/epn/tunnel/: protocol.hpp
openwrt/: README.md
openwrt/package/epn/: Makefile
openwrt/package/epn/files/etc/config/: epn
openwrt/package/epn/files/etc/init.d/: epn
openwrt/package/epn/files/usr/libexec/: epn-ping  epn-status
openwrt/package/epn/files/usr/share/luci/htdocs/luci-static/resources/view/epn/: client.js
openwrt/package/epn/files/usr/share/luci/menu.d/: luci-app-epn.json
openwrt/package/epn/files/usr/share/rpcd/acl.d/: luci-app-epn.json
scripts/: build-openwrt.sh  build-windows.sh  epn-setup.sh  epn-start.sh  epn-teardown.sh  install-server.sh  install-windows-client.ps1
tests/: CMakeLists.txt  test_crypto.cpp  test_protocol.cpp  test_routing.cpp
